# imprint

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
agents/: judge.md  recorder.md
docs/: architecture.md  configuration.md  limitations-and-roadmap.md  ontology-contracts.md  privacy-and-recovery.md  semantic-migrations.md  troubleshooting.md
hooks/: _bridge.py  health_check.py  hooks.json  session_start.py  stop_capture.py  user_prompt_submit.py
install/: install.ps1  install.sh  uninstall.ps1  uninstall.sh
release/: allowlist.txt
src/imprint/: __init__.py  backup.py  cli.py  config.py  constants.py  errors.py  lifecycle.py  paths.py  permissions.py  purge.py
tests/: conftest.py
tests/acceptance/: artifact_lifecycle.py  test_install_posix.sh  test_install_windows.ps1  test_upgrade_from_v300.sh
tests/adversarial/: test_capture_adversarial.py  test_domain_transition_adversarial.py  test_import_authority_smuggling.py  test_ingest_purge_portability.py  test_lifecycle_adversarial.py  test_release_security.py  test_retrieval_adversarial.py  test_semantic_reference_integrity.py  test_transcript_fd_binding.py  test_v301_authority_foundations.py  test_v301_default_product.py  test_v301_private_permissions.py  test_v301_store_backup_integrity.py  test_v301_truthful_runtime.py
tests/contract/: test_capture_boundaries.py  test_capture_proposals.py  test_cli_hooks_integration.py  test_domain_transition_cli.py  test_health_hook_exit_semantics.py  test_hooks.py  test_ingest_portability_cli.py  (+8 more)
(+74 files in other folders)
