[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imprint-local"
version = "3.0.1"
description = "Local-first provenance-preserving judgment capture and retrieval for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "Richard Schefren"}]
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["pytest>=8,<10", "pytest-cov>=5,<7"]
release = ["build==1.3.0"]

[project.scripts]
imprint = "imprint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
  "acceptance: clean-install or artifact acceptance",
  "windows: requires genuine Windows",
]
